# ESA-Helper-AZ

./: .env.example  .gitignore  BUILD_STATUS.md  CHANGES_SUMMARY.md  CLAUDE.md  CODEOWNERS  COMPLETE_FEATURE_SUMMARY.md  CONTRIBUTING.md  ESA_WORKFLOW.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  INVOICE_FEATURE.md  INVOICE_IMPLEMENTATION_SUMMARY.md  INVOICE_USER_GUIDE.md  LICENSE  MANUAL_ENTRY_FEATURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  TEMPLATE_FEATURE_SUMMARY.md  TESTING.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TEST_SETUP_SUMMARY.md  jest.config.js  main.py  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
app/: __init__.py  automation.py  classwallet.py  invoice_generator.py  routes.py  utils.py
app/templates/: _help_dropdown.html  _reports_dropdown.html  _settings_dropdown.html  _tools_dropdown.html  curriculum-generator.html  data-migration.html  faq.html  index.html  invoice_template.xltx  manage-curriculum-templates.html  manage-logs.html  manage-students.html  manage-temp-files.html  manage-templates.html  manage-vendors.html  reports.html  requirements.html  (+2 more)
scripts/: run_all_tests.sh  test_coverage.sh  test_file_requirements.sh
tests/: __init__.py  app.test.js  conftest.py  test_direct_pay.py  test_file_requirements.py  test_manual_submissions.py  test_pdf_splitting.py  test_reports.py  test_routes.py  test_submission_logging.py  test_templates.py
(+2 files in other folders)
